# hq-os

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  rot.md
.github/workflows/: collect.yml  guard.yml
collect/: embed.py  fetch.py  models.py  problem_lens.py  run.py  triage.py  you_lens.py
collect/sources/: __init__.py  bluesky.py  github_issues.py  hackernews.py  reddit.py  rss.py  stackexchange.py
rules/: always.md  never.md
tests/: test_embed.py  test_fetch.py  test_guard_patterns.sh  test_problem_lens.py  test_run.py  test_sources_auth.py  test_sources_noauth.py  test_triage.py  test_you_lens.py
tests/fixtures/: bluesky_search.json  feed.xml  github_issues.json  hn_algolia.json  reddit_listing.json  stackexchange.json
