[project]
name = "collect"
version = "0.1.0"
description = "Scrape, filter, and dedup public problem and news signal for hq routines"
requires-python = ">=3.12"
dependencies = [
    "httpx==0.28.1",
    "feedparser==6.0.11",
    "sentence-transformers==3.3.1",
    "numpy==2.2.1",
]

[project.optional-dependencies]
dev = ["pytest==8.3.4", "respx==0.22.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["collect*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
